force-app/main/default/objects/Project_Role__c/Project_Role__c.object-meta.xml
<CustomObject>
    <label>Project Role</label>
    <nameField>
        <displayFormat>ROLE-{0000}</displayFormat>
        <label>Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>