force-app/main/default/objects/Project_Role__c/fields/Hours_Complete__c.field-meta.xml
<CustomField>
    <fullName>Hours_Complete__c</fullName>
    <formula>Hours_Covered__c &gt;=  Hours_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Complete</label>
    <type>Checkbox</type>
</CustomField>