force-app/main/default/objects/Project_Role__c/fields/Hours_Covered__c.field-meta.xml
<CustomField>
    <fullName>Hours_Covered__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Hours Covered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>