force-app/main/default/objects/Project_Role__c/fields/Hours_Required__c.field-meta.xml
<CustomField>
    <fullName>Hours_Required__c</fullName>
    <label>Hours Required</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>